@@ -49,6 +49,9 @@ Library
 - Issue #3976: pprint for sets, frozensets, and dicts now succeed when
   they contain unorderable types.
 
+- Issue #5037: Proxy the __unicode__ special method instead to __unicode__
+  instead of __str__.
+
 - Issue #7341: Close the internal file object in the TarFile constructor in
   case of an error.
 
